--- a/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_async_langchain_interface.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_async_langchain_interface.yaml
@@ -11,24 +11,29 @@ interactions:
     method: GET
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
-    content: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+    body:
+      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:08 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '54'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:07 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "one, two, three, ", "model_id": "google/flan-ul2", "parameters":
       {}}'
@@ -46,25 +51,25 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"b06ca39a-722a-4f96-b2ca-07584df3065b","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:09.218Z","results":[{"generated_text":"one,
-      two, three, four","generated_token_count":8,"input_token_count":7,"stop_reason":"eos_token"}]}'
+    body:
+      string: '{"id":"32a246fc-a752-4322-b024-a166da4df749","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.052Z","results":[{"generated_text":"knock
+        knock","generated_token_count":3,"input_token_count":7,"stop_reason":"eos_token","seed":994549561}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:09 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '243'
+      - '250'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:08 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "a, b, c, d, ", "model_id": "google/flan-ul2", "parameters":
       {}}'
@@ -82,22 +87,23 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"25e7e338-a905-4546-ac84-a30d06f80261","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:09.859Z","results":[{"generated_text":"e","generated_token_count":3,"input_token_count":13,"stop_reason":"eos_token"}]}'
+    body:
+      string: '{"id":"09307a47-f106-4591-bd43-645aa4f9b16b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.450Z","results":[{"generated_text":"b,
+        c = 12, 10, 6, 6,","generated_token_count":11,"input_token_count":13,"stop_reason":"eos_token","seed":2918769209}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:09 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '224'
+      - '262'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:08 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
