--- a/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_langchain_interface.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_langchain_interface.yaml
@@ -11,24 +11,29 @@ interactions:
     method: GET
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
-    content: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+    body:
+      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:07 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '54'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:07 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "Monday, Tuesday, Wednesday, ", "model_id": "google/flan-ul2",
       "parameters": {}}'
@@ -46,23 +51,23 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"4bbc9232-8daf-4956-9d85-016f1ed0dad7","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:07.741Z","results":[{"generated_text":"Thursday,
-      Friday, Saturday, Sunday","generated_token_count":8,"input_token_count":7,"stop_reason":"eos_token"}]}'
+    body:
+      string: '{"id":"a01e28ef-4f0b-4bb1-b7bc-6c2831ebd2e6","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:07.324Z","results":[{"generated_text":"Thursday,
+        Friday,","generated_token_count":5,"input_token_count":7,"stop_reason":"eos_token","seed":4115139484}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:07 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '256'
+      - '257'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:07 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
