--- a/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_langchain_stream.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_langchain_stream.yaml
@@ -18,56 +18,41 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation_stream?version=2024-01-10
   response:
-    content: 'retry: 3000
+    body:
+      string: 'retry: 3000
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:10.897Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":7,"stop_reason":"not_finished"}]}
+        data: {"id":"825d52ec-bd21-46b2-8d79-1de1aee1bf07","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.889Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":7,"stop_reason":"not_finished","seed":3589214229}]}
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:10.934Z","results":[{"generated_text":"Thursday","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"825d52ec-bd21-46b2-8d79-1de1aee1bf07","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.929Z","results":[{"generated_text":"Thursday","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:10.956Z","results":[{"generated_text":",","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"825d52ec-bd21-46b2-8d79-1de1aee1bf07","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.952Z","results":[{"generated_text":",","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:10.977Z","results":[{"generated_text":"
-      Friday","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"825d52ec-bd21-46b2-8d79-1de1aee1bf07","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.973Z","results":[{"generated_text":"","generated_token_count":3,"input_token_count":0,"stop_reason":"eos_token","seed":3589214229}]}
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:10.998Z","results":[{"generated_text":",","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        event: close
 
 
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:11.018Z","results":[{"generated_text":"
-      Saturday","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:11.038Z","results":[{"generated_text":",","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:11.058Z","results":[{"generated_text":"
-      Sunday","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-      data: {"id":"3eca3008-4a3c-40bd-bc06-2a11e4b51fc3","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:11.078Z","results":[{"generated_text":"","generated_token_count":8,"input_token_count":0,"stop_reason":"eos_token"}]}
-
-
-      event: close
-
-
-      '
+        '
     headers:
-      Cache-Control:
+      cache-control:
       - no-cache,no-transform
-      Connection:
-      - keep-alive
-      Content-Type:
+      content-type:
       - text/event-stream
-      Date:
-      - Wed, 10 Jan 2024 13:44:10 GMT
-      Transfer-Encoding:
+      date:
+      - Thu, 25 Jan 2024 15:50:08 GMT
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
       - chunked
       x-no-compression:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
