--- a/tests/integration/extensions/cassettes/test_langchain_chat/TestLangChainChat.test_generate.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain_chat/TestLangChainChat.test_generate.yaml
@@ -23,24 +23,27 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/chat?version=2024-01-10
   response:
-    content: '{"id":"1ccf5e98-19fd-4dc5-8e65-0c7e296f5799","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-01-10T13:44:13.720Z","results":[{"generated_text":"  NLP
-      stands for Natural Language Processing, which is a subfield of artificial intelligence
-      (AI","generated_token_count":20,"input_token_count":161,"stop_reason":"max_tokens","seed":1229019418}],"conversation_id":"8d84ac55-0ea1-48c0-8598-038cab3d41c9"}'
+    body:
+      string: '{"id":"85f21f40-d627-441a-8c66-a10b54bbbcda","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-01-25T15:50:10.875Z","results":[{"generated_text":"  NLP
+        stands for Natural Language Processing, which is a subfield of artificial
+        intelligence (AI","generated_token_count":20,"input_token_count":160,"stop_reason":"max_tokens","seed":3432310443}],"conversation_id":"a2ec7761-e927-4c9c-943a-49395395f48e"}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:13 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '409'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:10 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
