--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_chat.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_chat.yaml
@@ -23,23 +23,27 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/chat?version=2024-01-10
   response:
-    content: '{"id":"0ea0d534-3171-45ba-af1d-b32126f0ce5a","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:22.255Z","results":[{"generated_text":"Neuro-Linguistic
-      Programming (NLP) is a set of techniques for communication and personal development.","generated_token_count":25,"input_token_count":130,"stop_reason":"eos_token"}],"conversation_id":"9ea6ffa7-fe6c-4fc1-83ae-9c06cdcbbc6a"}'
+    body:
+      string: '{"id":"9c7894b0-0cf8-4e86-bc2c-7be31abb7814","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:15.508Z","results":[{"generated_text":"NLP
+        refers to using interactions with children to help them improve consciousness
+        eating.","generated_token_count":17,"input_token_count":130,"stop_reason":"eos_token","seed":1735387020}],"conversation_id":"6c165af3-8135-47e6-9d5c-fa98cf2b8747"}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:22 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '383'
+      - '389'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:15 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
