--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete.yaml
@@ -11,24 +11,29 @@ interactions:
     method: GET
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
-    content: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+    body:
+      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:18 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '54'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:13 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=6d247d6198597e887510d8e26f4d2793; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "Hi! How''s the weather, eh?", "model_id": "google/flan-ul2",
       "parameters": {}}'
@@ -46,23 +51,23 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"1614bc89-1cf8-4d95-9d45-b0ceb1b0475d","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:19.342Z","results":[{"generated_text":"It''s
-      raining.","generated_token_count":7,"input_token_count":13,"stop_reason":"eos_token"}]}'
+    body:
+      string: '{"id":"09d6d92b-5594-4e7a-af42-383c19e94094","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.093Z","results":[{"generated_text":"It''s
+        a bit cloudy and cold, but I''m dressed warmly.","generated_token_count":20,"input_token_count":13,"stop_reason":"eos_token","seed":1715709070}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:19 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '236'
+      - '293'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:14 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
