--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
@@ -18,51 +18,63 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation_stream?version=2024-01-10
   response:
-    content: 'retry: 3000
+    body:
+      string: 'retry: 3000
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.389Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.497Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished","seed":372882511}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.430Z","results":[{"generated_text":"It","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.539Z","results":[{"generated_text":"Hey","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.453Z","results":[{"generated_text":"''","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.563Z","results":[{"generated_text":",","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.473Z","results":[{"generated_text":"s","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.584Z","results":[{"generated_text":"
+        Mike","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.494Z","results":[{"generated_text":"
-      rain","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.605Z","results":[{"generated_text":".","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.515Z","results":[{"generated_text":"ing","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.626Z","results":[{"generated_text":"
+        Not","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.535Z","results":[{"generated_text":".","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.647Z","results":[{"generated_text":"
+        so","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"9340c677-39b2-496c-9af8-5a5c0b220d14","model_id":"google/flan-ul2","created_at":"2024-01-10T13:44:20.556Z","results":[{"generated_text":"","generated_token_count":7,"input_token_count":0,"stop_reason":"eos_token"}]}
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.667Z","results":[{"generated_text":"
+        great","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      event: close
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.688Z","results":[{"generated_text":".","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      '
+        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.707Z","results":[{"generated_text":"","generated_token_count":9,"input_token_count":0,"stop_reason":"eos_token","seed":372882511}]}
+
+
+        event: close
+
+
+        '
     headers:
-      Cache-Control:
+      cache-control:
       - no-cache,no-transform
-      Connection:
-      - keep-alive
-      Content-Type:
+      content-type:
       - text/event-stream
-      Date:
-      - Wed, 10 Jan 2024 13:44:20 GMT
-      Transfer-Encoding:
+      date:
+      - Thu, 25 Jan 2024 15:50:14 GMT
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
       - chunked
       x-no-compression:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
