--- a/tests/integration/prompt/cassettes/test_prompt_service/TestPromptService.test_create_delete_prompt.yaml
+++ b/tests/integration/prompt/cassettes/test_prompt_service/TestPromptService.test_create_delete_prompt.yaml
@@ -17,31 +17,34 @@ interactions:
     method: POST
     uri: https://api.com/v2/prompts?version=2024-01-10
   response:
-    content: '{"result":{"id":"5Q19lWkC837FTj0z","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-      the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","parameters":null,"moderations":{},"created_at":"2024-01-10T13:44:28.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":924,"first_name":"Radek","last_name":"Jezek"},"messages":null}}'
+    body:
+      string: '{"result":{"id":"KzkY6DMNGjZeu4bA","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
+        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-01-25T15:50:22.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":26916,"first_name":"Radek","last_name":"Jezek"}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:28 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '433'
+      - '401'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:22 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '24'
+      - '22'
       x-ratelimit-reset:
-      - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+      - '0'
+    status:
+      code: 200
+      message: OK
 - request:
     body: ''
     headers:
@@ -52,23 +55,27 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/prompts/5Q19lWkC837FTj0z?version=2024-01-10
+    uri: https://api.com/v2/prompts/KzkY6DMNGjZeu4bA?version=2024-01-10
   response:
-    content: '{"result":{"id":"5Q19lWkC837FTj0z","name":"My test prompt","description":null,"data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-      the recipe for {{meal}} in the style of {{author}}","output":null,"model_id":"google/flan-t5-xl","parameters":null,"moderations":{},"created_at":"2024-01-10T13:44:28.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":924,"first_name":"Radek","last_name":"Jezek"},"messages":null}}'
+    body:
+      string: '{"result":{"id":"KzkY6DMNGjZeu4bA","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
+        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-01-25T15:50:22.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":26916,"first_name":"Radek","last_name":"Jezek"}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:29 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '466'
+      - '401'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:22 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -77,12 +84,13 @@ interactions:
       - '24'
       x-ratelimit-reset:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"parameters": {"return_options": {"generated_tokens": false, "input_text":
       true, "input_tokens": false, "token_logprobs": false, "token_ranks": false}},
-      "prompt_id": "5Q19lWkC837FTj0z"}'
+      "prompt_id": "KzkY6DMNGjZeu4bA"}'
     headers:
       accept:
       - '*/*'
@@ -97,26 +105,29 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"07bafe60-2ea5-4a25-8288-db6c6d4a1dab","model_id":"google/flan-t5-xl","created_at":"2024-01-10T13:44:33.830Z","results":[{"input_text":"Write
-      the recipe for goulash in the style of Shakespeare","generated_text":"Pomegranates:
-      1 cup, 1 1/2 cups pistachios, finely","generated_token_count":20,"input_token_count":13,"stop_reason":"max_tokens","seed":1943578716}]}'
+    body:
+      string: '{"id":"f6ab357f-a662-4064-a476-1e8b42d60493","model_id":"google/flan-t5-xl","created_at":"2024-01-25T15:50:23.924Z","results":[{"input_text":"Write
+        the recipe for goulash in the style of Shakespeare","generated_text":"stir
+        together the minced meat, onion, bell pepper, tomatoes, and carrots in a","generated_token_count":20,"input_token_count":13,"stop_reason":"max_tokens","seed":3255482813}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:33 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '367'
+      - '394'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:23 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: ''
     headers:
@@ -127,26 +138,29 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/prompts/5Q19lWkC837FTj0z?version=2023-11-22
+    uri: https://api.com/v2/prompts/KzkY6DMNGjZeu4bA?version=2023-11-22
   response:
-    content: ''
+    body:
+      string: ''
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:34 GMT
-      Keep-Alive:
-      - timeout=72
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:24 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=ab61fe594e37cae048810df94b864b98; path=/;
+        HttpOnly; Secure; SameSite=None
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
       - '24'
       x-ratelimit-reset:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 204
+    status:
+      code: 204
+      message: No Content
 - request:
     body: ''
     headers:
@@ -159,35 +173,33 @@ interactions:
     method: GET
     uri: https://api.com/v2/prompts?search=My%20test%20prompt&model_id=google%2Fflan-t5-xl&version=2024-01-10
   response:
-    content: '{"results":[{"id":"B2Y8qx0h70btfBvN","name":"My test prompt","description":null,"data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-      the recipe for {{meal}} in the style of {{author}}","output":null,"model_id":"google/flan-t5-xl","parameters":null,"moderations":{},"created_at":"2023-12-28T08:35:06.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":924,"first_name":"Radek","last_name":"Jezek"},"messages":null},{"id":"2rgiK90Gw5lKVPym","name":"My
-      test prompt","description":null,"data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-      the recipe for {{meal}} in the style of {{author}}","output":null,"model_id":"google/flan-t5-xl","parameters":null,"moderations":{},"created_at":"2023-12-28T08:34:53.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":924,"first_name":"Radek","last_name":"Jezek"},"messages":null},{"id":"oLT2bwM1sBcQtQvE","name":"My
-      test prompt","description":null,"data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-      the recipe for {{meal}} in the style of {{author}}","output":null,"model_id":"google/flan-t5-xl","parameters":null,"moderations":{},"created_at":"2023-12-27T15:35:12.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"author":{"id":924,"first_name":"Radek","last_name":"Jezek"},"messages":null}],"total_count":3}'
+    body:
+      string: '{"results":[],"total_count":0}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:35 GMT
-      Keep-Alive:
-      - timeout=72
-      Transfer-Encoding:
-      - chunked
-      content-encoding:
-      - gzip
+      cache-control:
+      - private
+      content-length:
+      - '30'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:24 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=ab61fe594e37cae048810df94b864b98; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '24'
+      - '23'
       x-ratelimit-reset:
-      - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+      - '0'
+    status:
+      code: 200
+      message: OK
 version: 1
