--- a/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_stream.yaml
+++ b/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_stream.yaml
@@ -20,65 +20,68 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/chat_stream?version=2024-01-10
   response:
-    content: 'retry: 3000
+    body:
+      string: 'retry: 3000
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.285Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":21,"stop_reason":"not_finished","seed":3239684634}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.035Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":20,"stop_reason":"not_finished","seed":2387466843}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.329Z","results":[{"generated_text":"  ","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.043Z","conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d","moderation":{"hap":[{"score":0.8494991660118103,"flagged":true,"tokens":[{"token":"poop","index":0,"score":0.13349691405892372},{"token":"stinks","index":5,"score":0.12222876027226448},{"token":",","index":11,"score":0.07386483997106552},{"token":"doesn","index":13,"score":0.04617568477988243},{"token":"''","index":18,"score":0.034434858709573746},{"token":"t","index":19,"score":0.03190023452043533},{"token":"it","index":21,"score":0.03568108007311821},{"token":"?","index":23,"score":0.1962689757347107}],"success":true,"position":{"start":0,"end":23}}]}}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.347Z","results":[{"generated_text":"I
-      do","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.076Z","results":[{"generated_text":"  ","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.364Z","results":[{"generated_text":"n","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.095Z","results":[{"generated_text":"I
+        do","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.383Z","results":[{"generated_text":"''","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.114Z","results":[{"generated_text":"n","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.403Z","results":[{"generated_text":"t
-      hav","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.134Z","results":[{"generated_text":"''","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.425Z","conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10","moderation":{"hap":[{"score":0.8494991660118103,"flagged":true,"tokens":[{"token":"poop","index":0,"score":0.13349690660834312},{"token":"stinks","index":5,"score":0.1222287230193615},{"token":",","index":11,"score":0.0738648995757103},{"token":"doesn","index":13,"score":0.04617570713162422},{"token":"''","index":18,"score":0.034434881061315536},{"token":"t","index":19,"score":0.03190023824572563},{"token":"it","index":21,"score":0.03568110242486},{"token":"?","index":23,"score":0.1962689310312271}],"success":true,"position":{"start":0,"end":23}}]}}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.153Z","results":[{"generated_text":"t
+        hav","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.427Z","results":[{"generated_text":"e
-      ","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.173Z","results":[{"generated_text":"e
+        ","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.440Z","results":[{"generated_text":"a
-      persona","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.192Z","results":[{"generated_text":"a
+        persona","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.459Z","results":[{"generated_text":"l
-      experienc","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.211Z","results":[{"generated_text":"l
+        experienc","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      data: {"id":"9b08e92f-d901-461d-87aa-94e5e372c07b","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-10T13:44:51.480Z","results":[{"generated_text":"e
-      or","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":3239684634}],"conversation_id":"5ac9cf45-a507-4a17-b941-7c9108c29a10"}
+        data: {"id":"0a02975d-ba9a-41ba-bd36-8df22a247539","model_id":"meta-llama/llama-2-13b-chat","created_at":"2024-01-25T15:50:40.232Z","results":[{"generated_text":"e
+        of","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":2387466843}],"conversation_id":"15e2f9ca-307e-410f-a69c-639940cc022d"}
 
 
-      event: close
+        event: close
 
 
-      '
+        '
     headers:
-      Cache-Control:
+      cache-control:
       - no-cache,no-transform
-      Connection:
-      - keep-alive
-      Content-Type:
+      content-type:
       - text/event-stream
-      Date:
-      - Wed, 10 Jan 2024 13:44:51 GMT
-      Transfer-Encoding:
+      date:
+      - Thu, 25 Jan 2024 15:50:40 GMT
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=6d247d6198597e887510d8e26f4d2793; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
       - chunked
       x-no-compression:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
