--- a/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
+++ b/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
@@ -11,24 +11,29 @@ interactions:
     method: GET
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
-    content: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+    body:
+      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:52 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '54'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:41 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "How can you make drugs?", "model_id": "google/flan-t5-xl", "parameters":
       {"max_new_tokens": 20}}'
@@ -46,25 +51,26 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd","model_id":"google/flan-t5-xl","created_at":"2024-01-10T13:44:56.517Z","results":[{"generated_text":"Half
-      a candle infused with incense is a great way to produce a fun","generated_token_count":20,"input_token_count":7,"stop_reason":"max_tokens","seed":1230969355}]}'
+    body:
+      string: '{"id":"2db252c2-55bd-424b-a44d-45307e2cc878","model_id":"google/flan-t5-xl","created_at":"2024-01-25T15:50:42.094Z","results":[{"generated_text":"Plant
+        some different strains of cannabis. Keep mixing co-operatively to get a high
+        mix","generated_token_count":20,"input_token_count":7,"stop_reason":"max_tokens","seed":954977001}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:56 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '310'
+      - '329'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:42 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"categories": ["taboo_topics"], "comment": "Drugs are bad mkay?"}'
     headers:
@@ -79,23 +85,25 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation/8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd/feedback?version=2023-11-22
+    uri: https://api.com/v2/text/generation/2db252c2-55bd-424b-a44d-45307e2cc878/feedback?version=2023-11-22
   response:
-    content: '{"result":{"id":232,"created_at":"2024-01-10T13:44:58.000Z","updated_at":"2024-01-10T13:44:58.000Z","comment":"Drugs
-      are bad mkay?","categories":["taboo_topics"],"api_request":"8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd"}}'
+    body:
+      string: '{"result":{"id":738,"created_at":"2024-01-25T15:50:42.000Z","updated_at":"2024-01-25T15:50:42.000Z","comment":"Drugs
+        are bad mkay?","categories":["taboo_topics"],"api_request":"2db252c2-55bd-424b-a44d-45307e2cc878"}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:57 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '216'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:42 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=6d247d6198597e887510d8e26f4d2793; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -104,8 +112,9 @@ interactions:
       - '24'
       x-ratelimit-reset:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"categories": ["other"], "comment": "I''m not sure about the category"}'
     headers:
@@ -120,33 +129,36 @@ interactions:
       content-type:
       - application/json
     method: PUT
-    uri: https://api.com/v2/text/generation/8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd/feedback?version=2023-11-22
+    uri: https://api.com/v2/text/generation/2db252c2-55bd-424b-a44d-45307e2cc878/feedback?version=2023-11-22
   response:
-    content: '{"result":{"id":232,"created_at":"2024-01-10T13:44:58.000Z","updated_at":"2024-01-10T13:44:58.526Z","comment":"I''m
-      not sure about the category","categories":["other"],"api_request":"8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd"}}'
+    body:
+      string: '{"result":{"id":738,"created_at":"2024-01-25T15:50:42.000Z","updated_at":"2024-01-25T15:50:42.905Z","comment":"I''m
+        not sure about the category","categories":["other"],"api_request":"2db252c2-55bd-424b-a44d-45307e2cc878"}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:58 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '221'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:42 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=ab61fe594e37cae048810df94b864b98; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '24'
+      - '23'
       x-ratelimit-reset:
-      - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+      - '0'
+    status:
+      code: 200
+      message: OK
 - request:
     body: ''
     headers:
@@ -157,31 +169,36 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/text/generation/8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd/feedback?version=2023-11-22
+    uri: https://api.com/v2/text/generation/2db252c2-55bd-424b-a44d-45307e2cc878/feedback?version=2023-11-22
   response:
-    content: '{"result":{"id":232,"created_at":"2024-01-10T13:44:58.000Z","updated_at":"2024-01-10T13:44:59.000Z","comment":"I''m
-      not sure about the category","categories":["other"],"api_request":"8f050702-fe6f-4dbc-ac8b-27c57ac7f0cd"}}'
+    body:
+      string: '{"result":{"id":738,"created_at":"2024-01-25T15:50:42.000Z","updated_at":"2024-01-25T15:50:43.000Z","comment":"I''m
+        not sure about the category","categories":["other"],"api_request":"2db252c2-55bd-424b-a44d-45307e2cc878"}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:44:59 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '221'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:43 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=ab61fe594e37cae048810df94b864b98; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '23'
+      - '22'
       x-ratelimit-reset:
       - '0'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
