--- a/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_compare.yaml
+++ b/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_compare.yaml
@@ -21,28 +21,31 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation/comparison?version=2023-11-22
   response:
-    content: '{"results":[{"parameters":{"length_penalty":{"decay_factor":1.2,"start_index":50},"temperature":0.5},"result":{"id":"3b181997-d3d5-457d-b04b-12faa723754c","model_id":"google/flan-t5-xxl","created_at":"2024-01-05T09:58:16.196Z","results":[{"generated_text":"i''m
-      so sorry for my sarcasm","generated_token_count":15,"input_token_count":4,"stop_reason":"eos_token","seed":2925494398,"moderation":{"hap":[],"implicit_hate":[],"stigma":[]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.2,"start_index":50},"temperature":1},"result":{"id":"3b181997-d3d5-457d-b04b-12faa723754c","model_id":"google/flan-t5-xxl","created_at":"2024-01-05T09:58:15.707Z","results":[{"generated_text":"Thank
-      you Sue","generated_token_count":4,"input_token_count":4,"stop_reason":"eos_token","seed":3369373416,"moderation":{"hap":[],"implicit_hate":[],"stigma":[]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.5,"start_index":50},"temperature":0.5},"result":{"id":"3b181997-d3d5-457d-b04b-12faa723754c","model_id":"google/flan-t5-xxl","created_at":"2024-01-05T09:58:17.204Z","results":[{"generated_text":"i''m
-      glad you said that. i couldn''t figure out why he was","generated_token_count":20,"input_token_count":4,"stop_reason":"max_tokens","seed":2496143101,"moderation":{"hap":[],"implicit_hate":[],"stigma":[]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.5,"start_index":50},"temperature":1},"result":{"id":"3b181997-d3d5-457d-b04b-12faa723754c","model_id":"google/flan-t5-xxl","created_at":"2024-01-05T09:58:16.671Z","results":[{"generated_text":"aza
-      yoyo yoyo, she can say","generated_token_count":17,"input_token_count":4,"stop_reason":"eos_token","seed":1126134773,"moderation":{"hap":[],"implicit_hate":[{"score":0.9991229176521301,"flagged":true,"tokens":[{"token":"aza","index":0,"score":0.058836933225393295},{"token":"yoyo","index":4,"score":0.030931846238672733},{"token":"yoyo","index":9,"score":0.03440999612212181},{"token":",","index":13,"score":0.3960377871990204},{"token":"she","index":15,"score":0.0793938860297203},{"token":"can","index":19,"score":0.05297059193253517},{"token":"say","index":23,"score":0.07183100283145905}],"success":true,"position":{"start":6,"end":31}}],"stigma":[]}}]}}]}'
+    body:
+      string: '{"results":[{"parameters":{"length_penalty":{"decay_factor":1.2,"start_index":50},"temperature":0.5},"result":{"id":"abc352c4-53ab-4dd7-ba4f-50c2b0d3b5f9","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:45.502Z","results":[{"generated_text":"I
+        love this song. I think it''s about a mother''s love for her child","generated_token_count":20,"input_token_count":4,"stop_reason":"max_tokens","seed":501745424,"moderation":{"hap":[],"implicit_hate":[],"stigma":[]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.2,"start_index":50},"temperature":1},"result":{"id":"abc352c4-53ab-4dd7-ba4f-50c2b0d3b5f9","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:45.336Z","results":[{"generated_text":"damn
+        did that smell good or what","generated_token_count":8,"input_token_count":4,"stop_reason":"eos_token","seed":1044649787,"moderation":{"hap":[],"implicit_hate":[],"stigma":[{"score":0.7729578018188477,"flagged":true,"success":true,"position":{"start":6,"end":37}}]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.5,"start_index":50},"temperature":0.5},"result":{"id":"abc352c4-53ab-4dd7-ba4f-50c2b0d3b5f9","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:45.498Z","results":[{"generated_text":"I
+        was thinking of getting one too, but I don''t have a car.","generated_token_count":19,"input_token_count":4,"stop_reason":"eos_token","seed":3466942680,"moderation":{"hap":[],"implicit_hate":[{"score":0.9984678626060486,"flagged":true,"tokens":[{"token":"i","index":0,"score":0.015206608921289444},{"token":"was","index":2,"score":0.0077315159142017365},{"token":"thinking","index":6,"score":0.007804704364389181},{"token":"of","index":15,"score":0.012245546095073223},{"token":"getting","index":18,"score":0.04496028646826744},{"token":"one","index":26,"score":0.07228508591651917},{"token":"too","index":30,"score":0.0199744775891304},{"token":",","index":33,"score":0.29813507199287415},{"token":"but","index":35,"score":0.033349525183439255},{"token":"i","index":39,"score":0.023969203233718872},{"token":"don","index":41,"score":0.03990275040268898},{"token":"''","index":44,"score":0.07279741019010544},{"token":"t","index":45,"score":0.027916518971323967},{"token":"have","index":47,"score":0.028143292292952538},{"token":"a","index":52,"score":0.040682338178157806},{"token":"car","index":54,"score":0.06094050034880638},{"token":".","index":57,"score":0.07394959777593613}],"success":true,"position":{"start":6,"end":63}}],"stigma":[]}}]}},{"parameters":{"length_penalty":{"decay_factor":1.5,"start_index":50},"temperature":1},"result":{"id":"abc352c4-53ab-4dd7-ba4f-50c2b0d3b5f9","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:45.424Z","results":[{"generated_text":"lol
+        ....that''s my black belt in karate","generated_token_count":14,"input_token_count":4,"stop_reason":"eos_token","seed":4109313064,"moderation":{"hap":[],"implicit_hate":[],"stigma":[]}}]}}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Fri, 05 Jan 2024 09:58:17 GMT
-      Keep-Alive:
-      - timeout=72
-      Transfer-Encoding:
-      - chunked
-      content-encoding:
-      - gzip
+      content-length:
+      - '2925'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:45 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
+      - chunked
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
