--- a/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create.yaml
+++ b/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create.yaml
@@ -11,24 +11,29 @@ interactions:
     method: GET
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
-    content: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+    body:
+      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:45:00 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '54'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Thu, 25 Jan 2024 15:50:43 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"input": "Here is a funny short joke about AI: ", "model_id": "google/flan-t5-xxl",
       "parameters": {"decoding_method": "sample", "max_new_tokens": 40, "min_new_tokens":
@@ -49,24 +54,24 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
-    content: '{"id":"f0681847-33ce-4df6-a1f8-1c8f00849774","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:00.986Z","results":[{"input_text":"Here
-      is a funny short joke about AI: ","generated_text":"A.I. is short for artificial
-      intelligence.","generated_token_count":11,"input_token_count":12,"stop_reason":"eos_token","seed":1901986402}]}'
+    body:
+      string: '{"id":"543d6aa1-ab6f-4fa0-9453-a2ffff144127","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.164Z","results":[{"input_text":"Here
+        is a funny short joke about AI: ","generated_text":"A man asks a robot to
+        play chess. The robot asks if he is human.","generated_token_count":25,"input_token_count":12,"stop_reason":"eos_token","seed":837848384}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:45:01 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '340'
+      - '361'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:44 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
