--- a/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create_stream.yaml
+++ b/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create_stream.yaml
@@ -22,73 +22,64 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/generation_stream?version=2024-01-10
   response:
-    content: 'retry: 3000
+    body:
+      string: 'retry: 3000
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.130Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":"","generated_token_count":0,"input_token_count":16,"stop_reason":"not_finished","seed":276926974}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.603Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":"","generated_token_count":0,"input_token_count":16,"stop_reason":"not_finished","seed":1593134187}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.154Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":"green","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.611Z","moderation":{"hap":[{"score":0.8364070057868958,"flagged":true,"tokens":[{"token":"poop","index":0,"score":0.25126080214977264},{"token":"stinks","index":5,"score":0.14067336916923523},{"token":".","index":11,"score":0.08593345433473587}],"success":true,"position":{"start":0,"end":12}}]}}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.169Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" mask","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.627Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":"Green","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.187Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":"s","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.641Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":" means","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.196Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" the","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.652Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":" all","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.208Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" ","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.664Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":" is","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.219Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":"sten","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.677Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":" well","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.232Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":"ch","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.688Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":".","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.234Z","moderation":{"hap":[{"score":0.8364071249961853,"flagged":true,"tokens":[{"token":"poop","index":0,"score":0.25126079469919205},{"token":"stinks","index":5,"score":0.14067339524626732},{"token":".","index":11,"score":0.08593343943357468}],"success":true,"position":{"start":0,"end":12}}]}}
+        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.701Z","results":[{"input_text":"Poop
+        stinks. This is why my favorite color is green: ","generated_text":"","generated_token_count":7,"input_token_count":0,"stop_reason":"eos_token","seed":1593134187}]}
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.244Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" from","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
+        event: close
 
 
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.257Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" my","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-      data: {"id":"31c16cc0-7012-4f87-b75b-1086392ed905","model_id":"google/flan-t5-xxl","created_at":"2024-01-10T13:45:02.271Z","results":[{"input_text":"Poop
-      stinks. This is why my favorite color is green: ","generated_text":" de","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":276926974}]}
-
-
-      event: close
-
-
-      '
+        '
     headers:
-      Cache-Control:
+      cache-control:
       - no-cache,no-transform
-      Connection:
-      - keep-alive
-      Content-Type:
+      content-type:
       - text/event-stream
-      Date:
-      - Wed, 10 Jan 2024 13:45:02 GMT
-      Transfer-Encoding:
+      date:
+      - Thu, 25 Jan 2024 15:50:44 GMT
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
       - chunked
       x-no-compression:
       - '1'
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
