--- a/tests/integration/text/cassettes/test_tokenization_service/TestTokenizationService.test_create_tokenization_single_input.yaml
+++ b/tests/integration/text/cassettes/test_tokenization_service/TestTokenizationService.test_create_tokenization_single_input.yaml
@@ -18,22 +18,25 @@ interactions:
     method: POST
     uri: https://api.com/v2/text/tokenization?version=2024-01-10
   response:
-    content: "{\"model_id\":\"google/flan-t5-xl\",\"created_at\":\"2024-01-10T13:45:03.485Z\",\"results\":[{\"token_count\":41,\"tokens\":[\"\u2581What\",\"\u2581did\",\"\u2581the\",\"\u2581large\",\"\u2581language\",\"\u2581model\",\"\u2581say\",\"\u2581to\",\"\u2581its\",\"\u2581programme\",\"r\",\"?\",\"\u2581I\",\"'\",\"m\",\"\u2581sorry\",\",\",\"\u2581I\",\"'\",\"m\",\"\u2581feeling\",\"\u2581\",\"a\",\"\u2581bit\",\"\u2581\",\"re\",\"curs\",\"ive\",\"\u2581today\",\".\",\"\u2581Can\",\"\u2581you\",\"\u2581give\",\"\u2581me\",\"\u2581\",\"a\",\"\u2581break\",\"...\",\"\u2581statement\",\"?\",\"</s>\"]}]}"
+    body:
+      string: "{\"model_id\":\"google/flan-t5-xl\",\"created_at\":\"2024-01-25T15:50:47.176Z\",\"results\":[{\"token_count\":41,\"tokens\":[\"\u2581What\",\"\u2581did\",\"\u2581the\",\"\u2581large\",\"\u2581language\",\"\u2581model\",\"\u2581say\",\"\u2581to\",\"\u2581its\",\"\u2581programme\",\"r\",\"?\",\"\u2581I\",\"'\",\"m\",\"\u2581sorry\",\",\",\"\u2581I\",\"'\",\"m\",\"\u2581feeling\",\"\u2581\",\"a\",\"\u2581bit\",\"\u2581\",\"re\",\"curs\",\"ive\",\"\u2581today\",\".\",\"\u2581Can\",\"\u2581you\",\"\u2581give\",\"\u2581me\",\"\u2581\",\"a\",\"\u2581break\",\"...\",\"\u2581statement\",\"?\",\"</s>\"]}]}"
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 10 Jan 2024 13:45:03 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '432'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
+      date:
+      - Thu, 25 Jan 2024 15:50:47 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
